# pysatl-mpest

./: .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml
.github/workflows/: check.yml
docs/: design.md
docs/source/: conf.py  index.rst  intro.rst
examples/readme_example/: example_ml.py
experimental_env/: utils.py
experimental_env/analysis/: metrics.py
experimental_env/analysis/analyze_summarizers/: error_summarizer.py
experimental_env/experiment/: estimators.py  experiment_description.py
experimental_env/experiment/experiment_executors/: abstract_executor.py  random_executor.py  (+1 more)
experimental_env/mixture_generators/: abstract_generator.py  utils.py
experimental_env/preparation/: dataset_generator.py
mpest/: __init__.py
mpest/models/: __init__.py  beta.py  cauchy.py  exponential.py  gaussian.py  pareto.py  uniform.py  weibull.py
tests/: utils.py
tests/core/: test_distribution.py  test_mixture_distribution.py  test_problem.py
tests/experimental_env/: test_reproducibility_expenv.py
tests/models/: test_beta.py  test_cauchy.py  test_pareto.py  test_uniform.py
tests/test_ml_estep/: test_ml.py
tests/tests_l_moments/: l_moments_utils.py  test_any_distributions_complex_l.py  test_any_distributions_simple_l.py  test_one_distribution_l.py  test_two_same_distributions_complex_l.py  test_two_same_distributions_simple_l.py
tests/tests_likelihood/: test_any_distributions_complex.py  test_any_distributions_simple.py  test_one_distribution.py  test_two_same_distributions_complex.py  test_two_same_distributions_simple.py
tests/tests_uniform/: test_uniform_different_types.py  uniform_utils.py
(+3 files in other folders)
