[tool.poetry]
name = "mpest"
version = "0.1.0"
description = "Parameter estimation of mixture distribution problem solver, based on EM algorithm"
authors = ["ToxaKaz <anton.a.kazancev@gmail.com>", "iraedeus <dtotjmyanin@mail.ru>"]
keywords = ["EM algorithm", "mixture distribution", "parameter estimation"]

license = "LICENSE"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]


[tool.poetry.dependencies]
python = ">=3.11"
matplotlib = ">=3.10.0,<4.0.0"
numpy = ">=2.2.3,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
scipy = ">=1.15.2,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"
ruff = "^0.9.6"
mypy = "==1.13.0"
sphinx = "^8.2.0"
hypothesis = "^6.131.7"
myst-parser = "^4.0.1"
furo = "^2024.8.6"

[tool.poetry.group.experiments.dependencies]
tqdm = "^4.67.1"
multiprocess = "^0.70.17"
ruamel-yaml = "^0.18.10"


[tool.ruff]
line-length = 120
output-format = "grouped"
exclude = ["*.ipynb", "__init__.py", "docs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]


[tool.mypy]
files = ["mpest", "experimental_env"]
ignore_missing_imports = true
exclude = ["^mpest/utils.py"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
